<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ndika Nime</string>
    <string name="nav_anime">Anime</string>
    <string name="nav_manga">Komik</string>
    <string name="nav_explore">Jelajah</string>
    <string name="nav_library">Koleksi</string>
    <string name="search_hint">Cari anime atau komik...</string>
    <string name="ongoing_anime">Anime Ongoing</string>
    <string name="popular_anime">Anime Populer</string>
    <string name="new_anime">Rilis Terbaru</string>
    <string name="schedule_anime">Jadwal Rilis</string>
    <string name="popular_manga">Komik Populer Hari Ini</string>
    <string name="latest_manga">Komik Terbaru</string>
    <string name="see_all">Lihat Semua</string>
    <string name="loading">Memuat data...</string>
    <string name="no_data">Tidak ada data ditemukan</string>
    <string name="retry">Coba Lagi</string>
    <string name="episode">Episode</string>
    <string name="chapter">Chapter</string>
    <string name="synopsis">Sinopsis</string>
    <string name="genre">Genre</string>
    <string name="status">Status</string>
    <string name="score">Skor</string>
    <string name="bookmark">Favorit</string>
    <string name="share">Bagikan</string>
    <string name="watch_now">Tonton Sekarang</string>
    <string name="read_now">Baca Sekarang</string>
    <string name="server_resolution">Kualitas Video</string>
    <string name="history_watch">Riwayat Nonton</string>
    <string name="history_read">Riwayat Baca</string>
    <string name="bookmarks">Favorit Saya</string>
    <string name="clear_history">Hapus Riwayat</string>
</resources>
